# hop

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  arithmetic.h  bazel-bin  bazel-jasmin  bazel-out  bazel-testlogs  compare.h  core.h  instruction.h  main.cc  value.h  value_stack.h
.github/workflows/: ci.yml
bazel/: BUILD
examples/: ;  BUILD  debugger.cc  execution_state.cc  fibonacci.cc  function_state.cc  hello_world.cc  serialization.cc
examples/brainfuck/: BUILD  README.md  build.cc  build.h  file.cc  file.h  instructions.h  interpreter.cc  jit.cc  x64_code_generator.h
hop/: BUILD  testing.h
hop/compile/: compiled_function.cc  compiled_function.h
hop/configuration/: BUILD  configuration.h  debug.h  harden.h
hop/core/: BUILD  debugger.cc  debugger.h  function.h  function_identifier.cc  function_identifier.h  function_registry.cc  function_registry.h  function_test.cc  input.h  input_test.cc  instruction.h  instruction_index.h  instruction_test.cc  metadata.cc  metadata.h  metadata_test.cc  output.h  output_test.cc  program_fragment.h  value.h  value_test.cc
jasmin/: BUILD  call_stack.h  call_stack_test.cc  debug.cc  debug.h  debug_test.cc  execute.h  execution_state.h  function.h  function_test.cc  instruction.h  instruction_index.h  instruction_pointer.h  instruction_pointer_test.cc  instruction_test.cc  op_code.h  op_code_test.cc  serialization.cc  serialization.h  serialization_test.cc  testing.h  translate.h  value.h  value_stack.h  value_stack_test.cc  value_test.cc
toolchain/: BUILD  cc_toolchain_config.bzl
(+131 files in other folders)
