workspace(name = "asoffer_jasmin")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "asoffer_nth",
  urls = ["https://github.com/asoffer/nth/archive/5235b77f7596c80f15a570366b737a5ec3f650b2.zip"],
  strip_prefix = "nth-5235b77f7596c80f15a570366b737a5ec3f650b2",
  sha256 = "020762632e7767ce7c83c6840357f94cef4640c1e32abbbbd103db77bc7b47e0",
)
